# NER-classifier-DistilBERT

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: trainer.py
src/notebooks/: Data Analysis.ipynb  Locally-NER-Classifier-DistilBERT.ipynb  NER Classifier.ipynb  NER-Classifier-DistilBERT.ipynb  Original.ipynb
